--- a/configurations/openhab.cfg
+++ b/configurations/openhab.cfg
@@ -32,7 +32,8 @@ folder:persistence=10,persist
 #security:netmask=
 
 # The name of the default persistence service to use
-persistence:default=rrd4j
+# persistence:default=rrd4j
+persistence:default=mysql
 
 # The refresh interval for the main configuration file. A value of '-1'
 # deactivates the scan (optional, defaults to '-1' hence scanning is deactivated)
